implementando rota de soft delete
