# internal/product/adapters/drivens/dto/productDAO.go
@@ -1,6 +1,10 @@
 package dto
 
-import "gorm.io/gorm"
+import (
+	"github.com/fiap-161/tech-challenge-fiap161/internal/product/core/model"
+	"github.com/fiap-161/tech-challenge-fiap161/internal/product/core/model/enum"
+	"gorm.io/gorm"
+)
 
 type ProductDAO struct {
 	gorm.Model
@@ -10,4 +14,28 @@ type ProductDAO struct {
 	PreparingTime uint
 	Category      string
 	ImageURL      string
+}
+
+func FromDAOToModel(dao ProductDAO) model.Product {
+	cat, _ := enum.FromCategoryString(dao.Category)
+	return model.Product{
+		ID:            dao.ID,
+		Name:          dao.Name,
+		Description:   dao.Description,
+		ImageURL:      dao.ImageURL,
+		Price:         dao.Price,
+		PreparingTime: dao.PreparingTime,
+		Category:      enum.Category(cat),
+	}
+}
+
+func FromModelToDAO(model model.Product) ProductDAO {
+	return ProductDAO{
+		Name:          model.Name,
+		Price:         model.Price,
+		Description:   model.Description,
+		Category:      model.Category.String(),
+		ImageURL:      model.ImageURL,
+		PreparingTime: model.PreparingTime,
+	}
 }
